Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ footer {
     background-color: #93ABA5;
     padding-top: 30px;
     padding-bottom: 10px;
-    color: #dddddd;
+    color: #eeeeee;
     position: absolute;
     bottom: 0;
     min-height: 100px;
@@ -39,7 +39,7 @@ h1 {
 }
 
 h2 {
-    margin-top: 31.5px;
+    margin-top: 0px;
     margin-bottom: 30px;
     text-align: center;
     font-family: 'PT Serif', serif;
@@ -104,8 +104,9 @@ ul {
 
 .bloco {
     margin-bottom: 0px;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    margin-top: 0px;
+    padding-top: 80px;
+    padding-bottom: 80px;
     padding-left: 0px;
     padding-right: 0px;
     text-align: center;
@@ -119,6 +120,11 @@ ul {
     font-weight: bold;
     letter-spacing: normal;
     margin-top: 30px;
+}
+
+.bios {
+    margin-top: 80px;
+    margin-bottom: 60px;
 }
 
 .rsvp {
@@ -144,6 +150,7 @@ ul {
 
 .banner {
     margin: 0;
+    margin-bottom: 80px;
     width: 100%;
     height: 700px;
     background-color: #93ABA5;
